--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,7 +38,7 @@
                 <p class="lead">To join to the service, <a href="#" th:href="@{/newUser}">Click</a> here</p>
             </div>
             <div sec:authorize="hasRole('ROLE_USER') || hasRole('ROLE_MANAGER')">
-                <p class="lead">Click <a href="#" th:href="@{/secured/addBoardGame}">Here</a> to add a boardgame!</p>
+                <p class="lead">Click <a href="#" th:href="@{/secured/addBoardGame}">Here</a> to add a boardgames!</p>
                 <form action="#" th:action="@{/logout}" method="post">
                     <input type="submit" value="Logout" class="btn btn-primary m-2 pb-2">
                 </form>
